login&register_function

--- a/BE/BE/appsettings.json
+++ b/BE/BE/appsettings.json
@@ -5,8 +5,18 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=xung_xinh_db;User ID=sa;Password=123456;TrustServerCertificate=True"
+    "DefaultConnection": "Server=DESKTOP-4C8DHR8\\SQL2022;Database=xung_xinh_db;Trusted_Connection=True;TrustServerCertificate=True"
   },
+
+  "Jwt": {
+    "Key": "XUNGXINH_SUPER_SECRET_KEY_32_CHARS_MINIMUM_123456",
+    "Issuer": "XungXinhBE",
+    "Audience": "XungXinhFE",
+    "ExpireMinutes": 120
+  },
+
   "AllowedHosts": "*"
 }
+
