--- a/BE/BE/appsettings.json
+++ b/BE/BE/appsettings.json
@@ -7,7 +7,7 @@
   },
 
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=xung_xinh_db;Trusted_Connection=True;TrustServerCertificate=True"
+    "DefaultConnection": "Server=DESKTOP-4C8DHR8\\SQL2022;Database=xung_xinh_db;Trusted_Connection=True;TrustServerCertificate=True"
   },
 
   "Jwt": {
