change database from sql server to postgresql

--- a/BE/BE/appsettings.json
+++ b/BE/BE/appsettings.json
@@ -7,8 +7,9 @@
   },
 
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=xung_xinh_db;Trusted_Connection=True;TrustServerCertificate=True"
-  },
+  "DefaultConnection": "Host=localhost;Port=5432;Database=xung_xinh_db;Username=postgres;Password=123456"
+}
+,
 
   "Jwt": {
     "Key": "XUNGXINH_SUPER_SECRET_KEY_32_CHARS_MINIMUM_123456",
